--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "promser"
 version = "0.1.0"
-authors = ["James <james.smith@truelayer.com>"]
+authors = ["James <james2509@live.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
+[dev-dependencies]
+prometheus = "0.11.0"
+rocket = "0.4.7"
+rocket_prometheus = "0.7.0"
