--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
+          profile: nightly
           toolchain: stable
           override: true
       - uses: actions-rs/cargo@v1
