--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -14,8 +14,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
         with:
-          profile: nightly
-          toolchain: stable
+          profile: minimal
+          toolchain: nightly
           override: true
       - uses: actions-rs/cargo@v1
         with:
